# django-pastebin

./: .env-example  .gitignore  Dockerfile  Makefile  pyproject.toml
app/: .env  admin.py
app/application/: main.py
app/application/api/: auth.py  pastebin_api.py
app/application/services/: paste_services.py
app/domain/: models.py
app/infrastructure/: repository.py  storages.py
docker_compose/: app.yaml  storages.yaml
project/: asgi.py  settings.py  urls.py  wsgi.py
